--- a/train_unified_lstm.ipynb
+++ b/train_unified_lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "num_velocities = 32\n",
     "message_dim = 2*num_notes + num_velocities + num_time_shifts\n",
     "instrument_numbers = [0, 6, 40, 41, 42, 43, 45, 60, 68, 70, 71, 73]\n",
-    "num_instruments = len(instrument_numbers)"
+    "num_instruments = len(instrument_numbers)\n",
+    "max_channels = 14"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,20 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Custom Dataset class\n",
     "class MIDIDataset(torch.utils.data.Dataset):\n",
-    "    # CONSTRUCTOR: creates a list of recording arrays and a list\n",
-    "    # of corresponding instrument arrays. Assumes that the directory\n",
-    "    # contains recording0.npy to recordingM.npy,\n",
+    "    # CONSTRUCTOR: creates a tensor of message chunks and associated instruments.\n",
+    "    # Assumes that the directory contains recording0.npy to recordingM.npy\n",
     "    # as well as instruments0.npy to instrumentsM.npy\n",
     "    # ARGUMENTS\n",
     "    # root_dir: the directory to search\n",
     "    # chunk_size: we'll chunk the data into chunks of this size (or less)\n",
-    "    def __init__(self, root_dir, chunk_size, transform=None):\n",
+    "    # max_channels: what's the largest number of instruments in any file?\n",
+    "    def __init__(self, root_dir, chunk_size, max_channels, transform=None):\n",
     "        files = os.listdir(root_dir)\n",
     "        recording_files = []\n",
     "        instrument_files = []\n",
@@ -396,80 +397,72 @@
     "        assert(len(recording_files) == len(instrument_files))\n",
     "        recording_files.sort()\n",
     "        instrument_files.sort()\n",
-    "        self.transform = transform\n",
     "        \n",
-    "        self.recordings = []\n",
+    "        self.chunks = []\n",
+    "        self.masks = []\n",
     "        self.instruments = []\n",
+    "        self.inst_masks = []\n",
+    "        \n",
+    "        ch = 0\n",
     "        for f in range(len(recording_files)):\n",
     "            recording = np.load(recording_files[f], allow_pickle=True)\n",
-    "            inst = np.load(instrument_files[f], allow_pickle=True)\n",
+    "            inst = [instrument_numbers.index(i) for i in np.load(instrument_files[f], allow_pickle=True)]\n",
+    "            \n",
+    "            nchunks = int(np.ceil(recording.shape[0]/chunk_size))\n",
+    "            self.chunks += [torch.zeros((chunk_size, 2), dtype=torch.long) for c in range(nchunks)]\n",
+    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
+    "            self.instruments += [torch.zeros(max_channels, dtype=torch.long) for c in range(nchunks)]\n",
+    "            self.inst_masks += [torch.ones(max_channels, dtype=torch.long) for c in range(nchunks)]\n",
     "            for chunk_start in range(0, recording.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, recording.shape[0])\n",
-    "                self.recordings.append(recording[chunk_start:chunk_end])\n",
-    "                self.instruments.append(inst)\n",
-    "        \n",
+    "                size = chunk_end - chunk_start\n",
+    "                self.chunks[ch][:size] = torch.tensor(recording[chunk_start:chunk_end], dtype=torch.long)\n",
+    "                self.masks[ch][:size] = False\n",
+    "                self.instruments[ch][:len(inst)] = torch.tensor(inst, dtype=torch.long)\n",
+    "                self.inst_masks[ch][:len(inst)] = False\n",
+    "                ch += 1\n",
+    "            \n",
+    "        self.transform = transform\n",
     "\n",
     "    # __len__\n",
-    "    # RETURN: number of chunks in the dataset\n",
+    "    # RETURN: the number of recording chunks in the dataset\n",
     "    def __len__(self):\n",
-    "        return len(self.recordings)\n",
+    "        return len(self.chunks)\n",
     "\n",
     "    # __getitem__\n",
     "    # ARGUMENTS\n",
-    "    # idx: indicates which chunk to get\n",
-    "    # RETURN: an instance with keys 'instruments', 'history'\n",
-    "    # instance['history'] is an Lx2 numpy array containing messages and associated channels\n",
-    "    # instance['instruments'] a numpy array of instrument numbers\n",
+    "    # idx: indicates which chunk(s) to get\n",
+    "    # RETURN: instance, a dictionary with keys 'history' and 'instruments'\n",
+    "    # instance['history'] is an Lx2 tensor containing messages and associated channels\n",
+    "    # instance['instruments'] a length N tensor of instrument numbers\n",
+    "    # instance['mask'] a length L tensor containing False where messages exist and True otherwise\n",
+    "    # instance['inst_mask'] a length N tensor containing False where instruments exist and True otherwise\n",
     "    def __getitem__(self, idx):\n",
-    "        instance = {'history': self.recordings[idx], \\\n",
-    "                    'instruments': self.instruments[idx]}\n",
+    "        if torch.is_tensor(idx):\n",
+    "            idx = idx.tolist()\n",
+    "        instance = {'history': self.chunks[idx], \\\n",
+    "                    'instruments': self.instruments[idx],\n",
+    "                    'mask': self.masks[idx],\n",
+    "                    'inst_mask': self.inst_masks[idx]}\n",
     "        \n",
     "        if self.transform:\n",
     "            instance = self.transform(instance)\n",
     "            \n",
-    "        return instance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# collate_fn: takes a list of samples from the dataset and turns them into a batch.\n",
-    "# ARGUMENTS\n",
-    "# batch: a list of dictionaries\n",
-    "# RETURN: a sample with keys 'history', 'instruments', and 'mask'\n",
-    "# sample['history']: an LxBx2 tensor containing messages and their associated channels\n",
-    "# sample['instruments']: a CxB tensor containing instrument numbers for each channel\n",
-    "# sample['mask']: an LxB tensor containing False where a message is\n",
-    "# valid, and True where it isn't (accounts for variable length sequences\n",
-    "# and zero padding)\n",
-    "# sample['inst_mask']: an NxB tensor containing False where an instrument exists and True\n",
-    "# otherwise\n",
-    "def collate_fn(batch):\n",
-    "    batch_size = len(batch)\n",
+    "        return instance\n",
     "    \n",
-    "    # We size our tensors to accomodate the longest sequence and the largest number of instruments\n",
-    "    max_inst = max([instance['instruments'].shape[0] for instance in batch])\n",
-    "    longest_len = max([instance['history'].shape[0] for instance in batch])\n",
-    "\n",
-    "    sample = {'history': torch.zeros((longest_len, batch_size, 2), dtype=torch.long), \\\n",
-    "              'instruments': torch.zeros((max_inst, batch_size), dtype=torch.long), \\\n",
-    "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool), \\\n",
-    "              'inst_mask': torch.ones((max_inst, batch_size), dtype=torch.bool)}\n",
-    "\n",
+    "def collate_fn(batch):\n",
+    "    chunk_size = batch[0]['history'].shape[0]\n",
+    "    max_channels = batch[0]['instruments'].shape[0]\n",
+    "    sample = {'history': torch.zeros((chunk_size, len(batch), 2), dtype=torch.long), \\\n",
+    "              'instruments': torch.ones((max_channels, len(batch)), dtype=torch.long), \\\n",
+    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool),\n",
+    "              'inst_mask': torch.ones((max_channels, len(batch)), dtype=torch.bool)}\n",
+    "    \n",
     "    for b, instance in enumerate(batch):\n",
-    "        instrument_idx = [instrument_numbers.index(i) for i in instance['instruments']]\n",
-    "        \n",
-    "        sample['instruments'][:len(instrument_idx), b] = torch.tensor(instrument_idx, dtype=torch.long)\n",
-    "        \n",
-    "        sample['inst_mask'][:len(instrument_idx), b] = False\n",
-    "        \n",
-    "        seq_length = instance['history'].shape[0]\n",
-    "        sample['history'][:seq_length, b] = torch.tensor(instance['history'], dtype=torch.long)\n",
-    "        sample['mask'][:seq_length, b] = False\n",
-    "            \n",
+    "        sample['history'][:, b] = instance['history']\n",
+    "        sample['instruments'][:, b] = instance['instruments']\n",
+    "        sample['mask'][:, b] = instance['mask']\n",
+    "        sample['inst_mask'][:, b] = instance['inst_mask']\n",
     "    return sample"
    ]
   },
@@ -482,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,10 +538,10 @@
     "learning_rate = 0.001\n",
     "chunk_size = 500\n",
     "\n",
-    "train_dataset = MIDIDataset('train_unified', chunk_size)\n",
+    "train_dataset = MIDIDataset('train_unified', chunk_size, max_channels)\n",
     "train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "test_dataset = MIDIDataset('test_unified', chunk_size)\n",
+    "test_dataset = MIDIDataset('test_unified', chunk_size, max_channels)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
     "message_loss_fn = torch.nn.CrossEntropyLoss()\n",
@@ -582,7 +575,7 @@
     "    \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "    test_losses[epoch] /= len(test_dataloader)\n",
-    "    print('Train Loss: %f, Test Loss: %f' %(train_losses[epoch], test_losses[epoch]))"
+    "    print('Train Loss: %f, Test Loss: %f' %(train_losses[epoch], test_losses[epoch])),"
    ]
   },
   {
