Fixed masking bug in baseline models

--- a/lstm_baseline.ipynb
+++ b/lstm_baseline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "            data = np.load(root_dir + '/' + file)\n",
     "            nchunks = int(np.ceil(data.shape[0]/chunk_size))\n",
     "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long) for c in range(nchunks)]\n",
-    "            self.masks += [torch.zeros(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
+    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
     "            for chunk_start in range(0, data.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, data.shape[0])\n",
     "                size = chunk_end - chunk_start\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 455,
    "metadata": {
     "scrolled": true
    },
@@ -92,28 +92,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "0\n",
+      "100\n",
+      "200\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2526"
+       "5743"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 455,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = MIDIDataset('train_maestro', 200)\n",
+    "train_data = MIDIDataset('train_sc', 200)\n",
     "len(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [
     {
@@ -126,22 +128,22 @@
     {
      "data": {
       "text/plain": [
-       "722"
+       "1494"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 456,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data = MIDIDataset('test_maestro', 200)\n",
+    "test_data = MIDIDataset('test_sc', 200)\n",
     "len(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,20 +219,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n",
-      "Computing test loss\n",
-      "Computing train loss\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_losses = [0 for epoch in range(epochs)]\n",
     "test_losses = [0 for epoch in range(epochs)]\n",
@@ -316,7 +305,7 @@
     }
    ],
    "source": [
-    "generated_music = generate_event(model, start_event=[16,60, 330, 188, 64, 330, 192, 67,330, 195, 72, 330, 200,67,330, 195,64, 330, 192,60, 330, 188], generation_length=1000)"
+    "generated_music = generate_music(model, primer=[16,60, 330, 188, 64, 330, 192, 67,330, 195, 72, 330, 200,67,330, 195,64, 330, 192,60, 330, 188], gen_length=1000)"
    ]
   },
   {
