--- a/transformer_baseline.ipynb
+++ b/transformer_baseline.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "            data = np.load(root_dir + '/' + file)\n",
     "            nchunks = int(np.ceil(data.shape[0]/chunk_size))\n",
     "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long) for c in range(nchunks)]\n",
-    "            self.masks += [torch.zeros(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
+    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
     "            for chunk_start in range(0, data.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, data.shape[0])\n",
     "                size = chunk_end - chunk_start\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 122,
    "metadata": {
     "scrolled": true
    },
@@ -92,28 +92,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "0\n",
+      "100\n",
+      "200\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2172"
+       "5743"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data = MIDIDataset('train_maestro', 200)\n",
+    "train_data = MIDIDataset('train_sc', 200)\n",
     "len(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -126,22 +128,22 @@
     {
      "data": {
       "text/plain": [
-       "290"
+       "1494"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data = MIDIDataset('test_maestro', 200)\n",
+    "test_data = MIDIDataset('test_sc', 200)\n",
     "len(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +225,7 @@
     "ff_size = 512\n",
     "\n",
     "# Checkpoint location: \n",
-    "checkpoint_dir = 'maestro_transformer_checkpoints'\n",
+    "checkpoint_dir = 'sc_transformer_checkpoints'\n",
     "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
@@ -238,39 +240,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n",
-      "Computing test loss\n",
-      "Computing train loss\n",
-      "Train loss: 4.654969, Test loss: 4.697808\n",
-      "Starting epoch 1\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n",
-      "Computing test loss\n",
-      "Computing train loss\n",
-      "Train loss: 4.491338, Test loss: 4.546344\n",
-      "Starting epoch 2\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n",
-      "Computing test loss\n",
-      "Computing train loss\n",
-      "Train loss: 4.651902, Test loss: 4.717244\n",
-      "Starting epoch 3\n",
-      "Starting iteration 0\n",
-      "Starting iteration 100\n",
-      "Starting iteration 200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_losses = [0 for epoch in range(epochs)]\n",
     "test_losses = [0 for epoch in range(epochs)]\n",
@@ -401,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
