Baselines used in presentation

--- a/transformer_baseline.ipynb
+++ b/transformer_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -103,7 +103,7 @@
        "5743"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "1494"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Optimization parameters:\n",
     "epochs = 10\n",
-    "batch_size = 10\n",
+    "batch_size = 16\n",
     "learning_rate = 1e-3\n",
     "\n",
     "# Model parameters: \n",
@@ -279,13 +279,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "COLOR = 'white'\n",
+    "plt.rcParams['text.color'] = COLOR\n",
+    "plt.rcParams['axes.labelcolor'] = COLOR\n",
+    "plt.rcParams['xtick.color'] = COLOR\n",
+    "plt.rcParams['ytick.color'] = COLOR\n",
+    "plt.rcParams['figure.figsize'] = [12, 8]\n",
+    "plt.rcParams['figure.dpi'] = 100 # 200 e.g. is really fine, but slower\n",
+    "plt.rcParams.update({'font.size': 22})\n",
+    "plt.plot(train_losses)\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Average Loss (Nats)')\n",
+    "plt.title('Training Loss')\n",
+    "plt.savefig('transformer_baseline_train_loss.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(test_losses)\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Average Loss (Nats)')\n",
+    "plt.title('Test Loss')\n",
+    "plt.savefig('transformer_baseline_test_loss.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.save(checkpoint_dir + '/train_losses.npy', np.array(train_losses))\n",
     "np.save(checkpoint_dir + '/test_losses.npy', np.array(test_losses))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -294,19 +329,19 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size)\n",
-    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch' + str(epochs - 1) + '.pth'))"
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,20 +361,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated_music = generate_music(model, primer=[16,60, 330, 188, 64, 330, 192, 67,330, 195, 72, 330, 200,67,330, 195,64, 330, 192,60, 330, 188], gen_length=1000)"
+    "generated_music = generate_music(model, primer=[16], gen_length=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('maestro_midi.npy', generated_music.flatten().detach().numpy())"
+    "np.save('sc_transformer_midi.npy', generated_music.flatten().detach().numpy())"
    ]
   },
   {
