--- a/lstm_baseline.ipynb
+++ b/lstm_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 86,
    "metadata": {
     "scrolled": true
    },
@@ -103,7 +103,7 @@
        "5743"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "1494"
       ]
      },
-     "execution_count": 456,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Optimization parameters:\n",
     "epochs = 10\n",
-    "batch_size = 10\n",
+    "batch_size = 16\n",
     "learning_rate = 1e-3\n",
     "\n",
     "# Model parameters: \n",
@@ -206,8 +206,8 @@
     "# Checkpoint location: \n",
     "checkpoint_dir = 'sc_lstm_checkpoints'\n",
     "\n",
-    "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True)\n",
-    "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True)\n",
+    "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
+    "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "loss_fn = torch.nn.CrossEntropyLoss()"
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,13 +268,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
-    "model.load_state_dict(torch.load(checkpont_dir + /epoch' + str(epochs - 1)))"
+    "import matplotlib.pyplot as plt\n",
+    "COLOR = 'white'\n",
+    "plt.rcParams['text.color'] = COLOR\n",
+    "plt.rcParams['axes.labelcolor'] = COLOR\n",
+    "plt.rcParams['xtick.color'] = COLOR\n",
+    "plt.rcParams['ytick.color'] = COLOR\n",
+    "plt.rcParams['figure.figsize'] = [12, 8]\n",
+    "plt.rcParams['figure.dpi'] = 100 # 200 e.g. is really fine, but slower\n",
+    "plt.rcParams.update({'font.size': 22})\n",
+    "plt.plot(train_losses)\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Average Loss (Nats)')\n",
+    "plt.title('Training Loss')\n",
+    "plt.savefig('lstm_baseline_train_loss.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(test_losses)\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Average Loss (Nats)')\n",
+    "plt.title('Training Loss')\n",
+    "plt.savefig('lstm_baseline_test_loss.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch4.pth'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,28 +339,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [00:11<00:00, 86.23it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generated_music = generate_music(model, primer=[16,60, 330, 188, 64, 330, 192, 67,330, 195, 72, 330, 200,67,330, 195,64, 330, 192,60, 330, 188], gen_length=1000)"
+    "generated_music = generate_music(model, primer=[50], gen_length=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('maestro_midi.npy', generated_music.flatten().detach().numpy())"
+    "np.save('sc_lstm_midi.npy', generated_music.flatten().detach().numpy())"
    ]
   },
   {
