No more velocity

--- a/data_to_midi.ipynb
+++ b/data_to_midi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,33 +12,30 @@
     "\n",
     "num_notes = 128 # Number of pitches in MIDI\n",
     "num_time_shifts = 100\n",
-    "num_velocities = 32\n",
     "min_time_shift = 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('test_history.npy', allow_pickle=True)\n",
-    "inst = np.load('test_instruments.npy', allow_pickle=True)"
+    "data = np.load('train/recording0.npy', allow_pickle=True)\n",
+    "inst = np.load('train/instruments0.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def data_to_midi(data, instrument_number):\n",
     "    instrument=pretty_midi.Instrument(program=instrument_number,name=pretty_midi.program_to_instrument_name(instrument_number))\n",
     "    curr_time = 0\n",
-    "    curr_velocity = 96\n",
-    "    #start time and velocity of the current note being played\n",
+    "    #start time of the current note being played\n",
     "    note_start = {}\n",
-    "    note_velocity = {}\n",
     "    note_same = {}\n",
     "    for i, idx in enumerate(data):\n",
     "        if idx < num_notes:\n",
@@ -47,7 +44,6 @@
     "                note_same[idx] += 1\n",
     "                continue\n",
     "            note_start[idx] = curr_time\n",
-    "            note_velocity[idx] = curr_velocity\n",
     "            note_same[idx] = 1\n",
     "        elif idx < 2*num_notes:\n",
     "            #note off event\n",
@@ -57,40 +53,36 @@
     "                #raise ValueError(\"note\" + str(idx-num_notes) + \"has not been started!\")\n",
     "            note_same[curr_note] -= 1\n",
     "            if note_same[curr_note] == 0:\n",
-    "                note=pretty_midi.Note(velocity=note_velocity[curr_note], pitch=curr_note, start=note_start[curr_note], end=curr_time)\n",
+    "                note=pretty_midi.Note(velocity=96, pitch=curr_note, start=note_start[curr_note], end=curr_time)\n",
     "                instrument.notes.append(note)\n",
     "                del note_start[curr_note]\n",
-    "                del note_velocity[curr_note]\n",
     "                del note_same[curr_note]\n",
-    "        elif idx < 2*num_notes + num_velocities:\n",
-    "            #velocity event\n",
-    "            #reversing the quantization in preprocess operation\n",
-    "            curr_velocity=int((idx-2*num_notes)*128/num_velocities)\n",
-    "        elif idx < 2*num_notes + num_time_shifts + num_velocities:\n",
+    "        elif idx < 2*num_notes + num_time_shifts:\n",
     "            #time shift event\n",
-    "            curr_time += (idx - 2*num_notes - num_velocities + 1)*min_time_shift\n",
+    "            curr_time += (idx - 2*num_notes + 1)*min_time_shift\n",
     "    return instrument\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "recording = pretty_midi.PrettyMIDI()\n",
     "for i,j in zip(data, inst):\n",
-    "    recording.instruments.append(data_to_midi(i,j))"
+    "    d = i[i >= 0]\n",
+    "    recording.instruments.append(data_to_midi(d,j))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recording.write(\"test_midi.mid\")"
+    "recording.write(\"recording0.mid\")"
    ]
   },
   {
@@ -133,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
