--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,22 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Faure\n",
-      "Starting Schubert\n",
       "Starting Cambini\n",
-      "Starting Ravel\n",
-      "Starting Bach\n",
+      "Starting Schubert\n",
+      "Starting Bach\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/noopygbhat/.local/lib/python3.7/site-packages/pretty_midi/pretty_midi.py:101: RuntimeWarning: Tempo, Key or Time signature change events found on non-zero tracks.  This is not a valid type 0 or type 1 MIDI file.  Tempo, Key or Time Signature may be wrong.\n",
+      "  RuntimeWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Faure\n",
       "Starting Dvorak\n",
-      "Starting Brahms\n",
-      "Starting Mozart\n",
       "Starting Beethoven\n",
+      "Starting Mozart\n",
+      "Starting Ravel\n",
+      "Starting Brahms\n",
       "Starting Haydn\n"
      ]
     }
@@ -39,20 +53,8 @@
     "num_time_shifts = 100 \n",
     "min_time_shift = 0.01\n",
     "\n",
-    "# Represents dynamics. There are 128 possible velocities but the music transformer\n",
-    "# uses 32, so that's what we'll use here\n",
-    "num_velocities = 32\n",
-    "\n",
-    "# A message can be NOTE_ON, NOTE_OFF, TIME_SHIFT, or SET_VELOCITY\n",
-    "message_dim = 2*num_notes + num_time_shifts + num_velocities\n",
-    "\n",
-    "# quantize_velocity: takes a MIDI velocity value and puts it into the correct bin\n",
-    "# in our reduced representation\n",
-    "# ARGUMENTS\n",
-    "# velocity: a MIDI velocity between 0 and 127 (inclusive)\n",
-    "# RETURN: the quantized velocity\n",
-    "def quantize_velocity(velocity):\n",
-    "    return int(velocity*num_velocities/128)\n",
+    "# A message can be NOTE_ON, NOTE_OFF, or TIME_SHIFT\n",
+    "message_dim = 2*num_notes + num_time_shifts\n",
     "\n",
     "# quantize_time_shift: takes a time shift and puts it into the correct bin\n",
     "# in our reduced representation\n",
@@ -76,21 +78,13 @@
     "def note_off_event(note):\n",
     "    return num_notes + note\n",
     "\n",
-    "# velocity_event: generates index for a quantized velocity\n",
-    "# ARGUMENTS\n",
-    "# velocity: a quantized MIDI velocity\n",
-    "# RETURN: the index of the SET_VELOCITY message\n",
-    "def velocity_event(velocity):\n",
-    "    assert(0 <= velocity and velocity < num_velocities)\n",
-    "    return 2*num_notes + velocity\n",
-    "\n",
     "# time_shift_event: generates the index for a TIME_SHIFT event\n",
     "# ARGUMENTS\n",
     "# time_shift: the quantized time shift\n",
     "# RETURN: a one-hot encoding of the TIME_SHIFT message\n",
     "def time_shift_event(time_shift):\n",
     "    assert(0 <= time_shift and time_shift < num_time_shifts)\n",
-    "    return 2*num_notes + num_velocities + time_shift\n",
+    "    return 2*num_notes + time_shift\n",
     "\n",
     "# append_time_shift: appends a time shift event to the data array. If the time\n",
     "# shift is too large, split it into multiple small time shifts. Also appends\n",
@@ -128,22 +122,16 @@
     "            # There are 7 files that cause an IO error, both with mido and pretty_midi. Haven't looked into why\n",
     "            continue\n",
     "        \n",
-    "        # Store data in a numpy array of 2d numpy arrays. Each index in the outer numpy array represents an instrument\n",
-    "        # in the file. Each inner numpy array is LxD, where L is the number of MIDI messages associated with the instrument,\n",
-    "        # and D is the dimension of our message representation\n",
-    "        data = np.array([0 for i in range(len(mid.instruments))], dtype='object')\n",
+    "        # Store data in a 2d numpy array. Dimension 0 indexes the instruments. \n",
+    "        # Dimension 1 contains a sequence of messages for each instrument. Each sequence is padded\n",
+    "        # with -1.\n",
+    "        data = [[] for instrument in mid.instruments]\n",
     "        \n",
-    "        # Store message times for each instrument. Specifically, we have a numpy array of numpy arrays, where\n",
-    "        # each inner numpy array is a sequence of times, denoting the time of each message in data\n",
-    "        times = np.array([0 for i in range(len(mid.instruments))], dtype='object')\n",
+    "        # Store message times for each instrument. Specifically, we have a 2d numpy array, as above,\n",
+    "        # but containing message times instead of messages. Again, padded with -1\n",
+    "        times = [[] for instrument in mid.instruments]\n",
     "        \n",
-    "        for i, instrument in enumerate(mid.instruments):\n",
-    "            data[i] = []\n",
-    "            times[i] = []\n",
-    "            \n",
-    "            # Quantized value of the last velocity message\n",
-    "            last_velocity = -1\n",
-    "            \n",
+    "        for i, instrument in enumerate(mid.instruments):            \n",
     "            # Priority queue of notes to turn off and the times to turn them off.\n",
     "            # Specifically, this is a list of tuples of the form (off_time, pitch),\n",
     "            # where the first element of the list is always the next note to turn off\n",
@@ -167,13 +155,6 @@
     "                # Time shift until we reach the start of this note\n",
     "                append_time_shift(data[i], times[i], time, note.start - time)\n",
     "                time = note.start\n",
-    "                    \n",
-    "                velocity = quantize_velocity(note.velocity)\n",
-    "                if velocity != last_velocity:\n",
-    "                    # We have a new velocity. Add a SET_VELOCITY event\n",
-    "                    last_velocity = velocity\n",
-    "                    data[i].append(velocity_event(velocity))\n",
-    "                    times[i].append(time)\n",
     "                \n",
     "                data[i].append(note_on_event(note.pitch))\n",
     "                times[i].append(time)\n",
@@ -195,129 +176,32 @@
     "            \n",
     "            assert(len(times[i]) == len(data[i]))\n",
     "        \n",
-    "        np.save('preprocessed_data/recording' + str(fnum) + '.npy', data)\n",
-    "        np.save('preprocessed_data/times' + str(fnum) + '.npy', times)\n",
+    "        max_len = max([len(seq) for seq in data])\n",
+    "        \n",
+    "        data_np = -np.ones((len(data), max_len), dtype='long')\n",
+    "        for i, seq in enumerate(data):\n",
+    "            data_np[i, :len(seq)] = np.array(seq)\n",
+    "            \n",
+    "        times_np = -np.ones((len(data), max_len), dtype='float')\n",
+    "        for i, seq in enumerate(times):\n",
+    "            times_np[i, :len(seq)] = np.array(seq)\n",
+    "        \n",
+    "        if fnum%5 == 4:\n",
+    "            prefix = 'test'\n",
+    "        else:\n",
+    "            prefix = 'train'\n",
+    "            \n",
+    "        np.save(prefix + '/recording' + str(fnum) + '.npy', data_np)\n",
+    "        np.save(prefix + '/times' + str(fnum) + '.npy', times_np)\n",
     "        \n",
     "        # Also save a numpy array containing the MIDI number for each instrument\n",
     "        instruments = np.array([instrument.program for instrument in mid.instruments])\n",
-    "        np.save('preprocessed_data/instruments' + str(fnum) + '.npy', instruments)\n",
+    "        np.save(prefix + '/instruments' + str(fnum) + '.npy', instruments)\n",
     "        \n",
     "        data_fnames.append(composer + '/' + fname)\n",
     "        fnum += 1\n",
     "        \n",
     "pickle.dump(data_fnames, open( \"preprocessed_data_fnames.p\", \"wb\" ) )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Instrument(program=40, is_drum=False, name=\"Violin 1\"),\n",
-       " Instrument(program=40, is_drum=False, name=\"Violin 2\"),\n",
-       " Instrument(program=41, is_drum=False, name=\"Viola\"),\n",
-       " Instrument(program=42, is_drum=False, name=\"Violoncello\")]"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mid = pretty_midi.PrettyMIDI(base_path + 'Haydn/2104_op64n5_1.mid')\n",
-    "mid.instruments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 252,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "674\n"
-     ]
-    }
-   ],
-   "source": [
-    "# For testing\n",
-    "\n",
-    "data = [[] for i in range(4)]\n",
-    "times = [[] for i in range(4)]\n",
-    "for i, instrument in enumerate(mid.instruments):\n",
-    "    # Quantized value of the last velocity message\n",
-    "    last_velocity = -1\n",
-    "\n",
-    "    # Priority queue of notes to turn off and the times to turn them off.\n",
-    "    # Specifically, this is a list of tuples of the form (off_time, pitch),\n",
-    "    # where the first element of the list is always the next note to turn off\n",
-    "    off_queue = []\n",
-    "\n",
-    "    time = 0\n",
-    "\n",
-    "    for n, note in enumerate(instrument.notes):\n",
-    "        if n > 0 and note.pitch == instrument.notes[n - 1].pitch and note.start == instrument.notes[n - 1].start:\n",
-    "            continue\n",
-    "            \n",
-    "        # We need to turn off a note\n",
-    "        while off_queue and note.start > off_queue[0][0]:\n",
-    "            append_time_shift(data[i], times[i], time, off_queue[0][0] - time)\n",
-    "            data[i].append(note_off_event(off_queue[0][1]))\n",
-    "            time = off_queue[0][0]\n",
-    "            times[i].append(time)\n",
-    "            heapq.heappop(off_queue)\n",
-    "\n",
-    "        # Time shift until we reach the start of this note\n",
-    "        append_time_shift(data[i], times[i], time, note.start - time)\n",
-    "        times[i].append(time)\n",
-    "        time = note.start\n",
-    "\n",
-    "        velocity = quantize_velocity(note.velocity)\n",
-    "        if velocity != last_velocity:\n",
-    "            # We have a new velocity. Add a SET_VELOCITY event\n",
-    "            last_velocity = velocity\n",
-    "            data[i].append(velocity_event(velocity))\n",
-    "            times[i].append(time)\n",
-    "\n",
-    "        data[i].append(note_on_event(note.pitch))\n",
-    "        times[i].append(time)\n",
-    "        if len(data[i]) == 2598 and i == 0:\n",
-    "            print(n)\n",
-    "\n",
-    "        # Add this note to the queue of notes needing to be turned off\n",
-    "        heapq.heappush(off_queue, (note.end, note.pitch))\n",
-    "\n",
-    "        if n == len(instrument.notes) - 1:\n",
-    "            # No more notes left. Flush the off queue\n",
-    "            while off_queue:\n",
-    "                append_time_shift(data[i], times[i], time, off_queue[0][0] - time)\n",
-    "                data[i].append(note_off_event(off_queue[0][1]))\n",
-    "                time = off_queue[0][0]\n",
-    "                times[i].append(time)\n",
-    "                heapq.heappop(off_queue)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note(start=276.217216, end=276.309321, pitch=78, velocity=49)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mid.instruments[0].notes[674]) # 674 and 675 are the same note"
    ]
   },
   {
@@ -349,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
